  files are installed with a vimball. Local installation is done using the
  Python user scheme instead of the home scheme. pdb-clone is now installed
  separately from PyPI.

* The pyclewn program is now started with the command ``python -m clewn``
  followed by the options and an optional argument that selects which debugger
  to run.

* ``CTRL-E`` is a standard Vim command, replace it with ``CTRL-K`` in pyclewn
  key mappings.

New features
^^^^^^^^^^^^

* The first optional argument of the ``:Pyclewn`` Vim command selects the
  debugger and the following arguments are passed to the debugger. For
  example, to debug ``foobar foobar_arg`` with gdb, run the Vim commmand
  ``:Pyclewn gdb --args foobar foobar_arg``.

* The new ``g:pyclewn_terminal`` Vim global variable allows the pyclewn
  program started with ``:Pyclewn`` to run in a terminal instead of as a
  daemon, and helps trouble shooting startup problems.

Bug fixes
^^^^^^^^^

* When pyclewn is started from a terminal, the controlling terminal of the gdb
  inferior process is now correctly set to the terminal from where pyclewn has
  been started.

* The terminal spawned by the ``inferiortty`` command is now automatically
  closed at the end of each debugging session.

* Fix a gdb version parsing error on the non-conformant Cygwin versions of
  gdb. See the bug report at
  http://cygwin.com/ml/cygwin/2014-06/msg00211.html.

* Fix the problem that changes made to the plugin global variables after the
  first invocation of ``:Pyclewn`` are ignored.

Pyclewn 1.11
------------

.. September 10, 2013

Bug fix
^^^^^^^

* Fix gdb version detection on linux Suse 12.2 and Fedora 19 that print a gdb
  header not GNU standards compliant.

Pyclewn 1.10
------------

.. February 7, 2013

New feature
^^^^^^^^^^^

* Use now pdb-clone_ instead of the standard library Python debugger, pdb_.

  * With breakpoints, pyclewn runs now just above the speed of the